--- a/index.htm
+++ b/index.htm
@@ -134,8 +134,8 @@ d.innerHTML=`<div style="width:100%; height: 100%;border:4px solid #73dcff;borde
 
   
   <p id="pp1" class="text-center"style="color:white;   font-family: 'Oleo Script', cursive;font-size:22px;"> </p>
-  <button onclick="rem()" class="btn btn-danger btn-sm">del🗑</button>
-  <button onclick="edi(this)" class="btn btn-secondary btn-sm">edit✏️</button>
+  <button onclick="rem()" class="btn btn-danger btn-sm" style="outline:none;" >del🗑</button>
+  <button onclick="edi(this)" class="btn btn-secondary btn-sm"style="outline:none;" >edit✏️</button>
   
 </div>`;
 
